# Odyssey2-0

./: XML format  xml format
Cliente/: Holi
Cliente/Odyssey-master/: README.md
Cliente/Odyssey-master/src/controller/: Client.java  MainApp.java
Cliente/Odyssey-master/src/controller/model/: Base64Converter.java  Notification.java  PlayList.java  Song.java  User.java  Wrapper.java  xmlManager.java
Cliente/Odyssey-master/src/controller/view/: AddSongController.java  Controller.java  DarkTheme.css  DisplayController.java  FriendDataController.java  NotificationsPanelController.java  Odyssey Content.fxml  Odyssey NotificationsPanel.fxml  Odyssey SignUp.fxml  Odyssey2.0 Content.fxml  Odyssey2.0 FriendData.fxml  Odyssey2.0 SongData.fxml  Odyssey2.0 UserData.fxml  Odyssey2.0 contentDisplay.fxml  RatingPanelController.java  SignInController.java  SignUpController.java  SongDataController.java  UserDataController.java  mainContentController.java
Integracion/: Holi
Servidor/: Holi  examples
Servidor/DataManager/: CMakeLists.txt  DataManager.cpp  DataManager.h  HashClass.cpp  HashClass.h  main.cpp
Servidor/HashFunct/: CMakeLists.txt  main.cpp
Servidor/MySQLConnector/: CMakeLists.txt  MySQLConnector.cpp  MySQLConnector.h  main.cpp
Servidor/RAID5Controller/: RAID5Controller.cpp  RAID5Controller.h  example.txt
Servidor/Searching/: AVLTree.cpp  AVLTree.h  NodoSimple.h  SimpleLinkedList.h  btree.cpp
Servidor/Sorting/: Sort.cpp  Sort.h
Servidor/Tree/: UserNode.cpp  UserNode.h  UsersTree.cpp  UsersTree.h
Servidor/UserManager/: CMakeLists.txt  UserManager.cpp  UserManager.h  main.cpp
Servidor/XMLManager/: CMakeLists.txt  XMLManager.cpp  XMLManager.h  XMLParts.cpp  XMLParts.h  main.cpp  mainServer.cpp  mainServer.h
